creacion del esqueleto del proyecto, falta diseño y agregar datos

--- a/index.html
+++ b/index.html
@@ -3,9 +3,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fuentes.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th colspan="3">HOJA DE VIDA</th>
+        </tr>
+        <tr>
+            <td>
+                <div >
+                    <img class="foto" src="imagenes/foto.jpg " width="200" alt=" foto del aspirante" >
+                </div>
+            </td>
+            <td>
+                <table class="tablaI">
+                    <tr>
+                        <th colspan="2">ESTIDUOS</th>
+                    </tr>
+                    <tr>
+                        <td>basica primaria</td>
+                        <td>&nbsp</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp</td>
+                        <td>dasdadad</td>
+                    </tr>
+                    <tr>
+                        <td>bachillerato</td>
+                        <td>&nbsp</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp</td>
+                        <td>&dasdasd</td>
+                    </tr>
+                    <tr>
+                        <td>tecnico</td>
+                        <td>&nbsp</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp</td>
+                        <td>sdadasdad</td>
+                    </tr>
+                </table>
+            </td>
+            <td><table class="tablaI">
+                <tr>
+                    <th colspan="2">PROYECTOS</th>
+                </tr>
+                <tr>
+                    <td>Nombre de proyecto</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>año realizacion</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>descripcion</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>logros alcanzados</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>stack tec</td>
+                </tr>
+            </table>
+        </td>
+        </tr>
+        <tr>
+            <td>
+                <table class="tablaI">
+                <tr>
+                    <th colspan="2">INFORMACION</th>
+                </tr>
+                <tr>
+                    <td>Nombre</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>apellidos</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>email</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>Nro de contacto</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>edad</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>direccion</td>
+                    <td>&nbsp</td>
+                </tr><tr>
+                    <td>&nbsp</td>
+                    <td>&nbsp</td>
+                </tr>
+            </table>
+            </td>
+            <td><table class="tablaI">
+                <tr>
+                    <th colspan="2">CURSOS</th>
+                </tr>
+                <tr>
+                    <td>Nombre del curso</td>
+                    <td>&nbsp</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>insitucion, año</td>
+                </tr>
+                <tr>
+                    <td>&nbsp</td>
+                    <td>stack tecnologico</td>
+                </tr>
+            </table>
+        </td>
+        <td><table class="tablaI">
+            <tr>
+                <th colspan="2">EXPERIENCIA LABORAL</th>
+            </tr>
+            <tr>
+                <td>Empresa o persona</td>
+                <td>&nbsp</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>año/duracion</td>
+            </tr>
+            <tr>
+                <td>&nbsp</td>
+                <td>logros</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>stack tech</td>
+            </tr>
+        </table>
+        </td>
+        </tr>
+        <tr>
+            <td>&nbsp</td>
+            <td>&nbsp</td>
+            <td><table class="tablaI">
+                <tr>
+                    <th>slills</th>
+                </tr>
+                <tr>
+                    <td>python basico</td>
+            </table>
+            </td>
+        </tr>
+        <tr>
+            
+        </tr>
+    </table>
 </body>
 </html>
