aplicacion del diseño, ingreso de datos y creacion del formulario

--- a/index.html
+++ b/index.html
@@ -7,185 +7,211 @@
     <link rel="stylesheet" href="css/fuentes.css">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#B9EAE8" )>
     <table>
         <tr>
-            <th colspan="3">HOJA DE VIDA</th>
+            <th class="roboto-bold" colspan="3">HOJA DE VIDA</th class="roboto-bold">
         </tr>
         <tr>
-            <td>
+            <td class="roboto-regular-italic">
                 <div >
                     <img class="foto" src="imagenes/foto.jpg " width="200" alt=" foto del aspirante" >
-                </div>
-            </td>
-            <td>
+                </div><br><br>
+            <td class="roboto-regular-italic">
                 <table class="tablaI">
                     <tr>
-                        <th colspan="2">ESTIDUOS</th>
+                        <th class="roboto-bold" class="roboto-bold">ESTIDUOS</th class="roboto-bold">
                     </tr>
                     <tr>
-                        <td>basica primaria</td>
-                        <td>&nbsp</td>
+                        <td class="roboto-regular-italic">basica primaria</td class  >
+                        <td class="roboto-regular-italic">&nbsp</td class  >
                     </tr>
                     <tr>
-                        <td>&nbsp</td>
-                        <td>dasdadad</td>
+                        <td class="roboto-regular-italic">&nbsp</td class  >
+                        <td class="roboto-regular-italic">Liceo Mixto San Jose - 2016</td class  >
                     </tr>
                     <tr>
-                        <td>bachillerato</td>
-                        <td>&nbsp</td>
+                        <td class="roboto-regular-italic">bachillerato</td class  >
+                        <td class="roboto-regular-italic">&nbsp</td class  >
                     </tr>
                     <tr>
-                        <td>&nbsp</td>
-                        <td>&dasdasd</td>
+                        <td class="roboto-regular-italic">&nbsp</td class  >
+                        <td class="roboto-regular-italic">Colegio Nieves Cortes Picon - 2023</td class  >
                     </tr>
                     <tr>
-                        <td>tecnico</td>
-                        <td>&nbsp</td>
+                        <td class="roboto-regular-italic">tecnico</td class  >
+                        <td class="roboto-regular-italic">&nbsp</td class  >
                     </tr>
                     <tr>
-                        <td>&nbsp</td>
-                        <td>sdadasdad</td>
+                        <td class="roboto-regular-italic">&nbsp</td class  >
+                        <td class="roboto-regular-italic">CampusLands - 2024</td class  >
                     </tr>
                 </table>
-            </td>
-            <td><table class="tablaI">
+            </td class  >
+            <td class="roboto-regular-italic"><table class="tablaI">
                 <tr>
-                    <th colspan="2">PROYECTOS</th>
+                    <th class="roboto-bold">PROYECTOS</th class="roboto-bold">
                 </tr>
                 <tr>
-                    <td>Nombre de proyecto</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">Liga betplay</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>año realizacion</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">2024</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>descripcion</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">desarrollo de un programa que gestiona la informacion de un  torneo de futbol</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>logros alcanzados</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">logré  dominar el lenguaje de python a nivel basico y aprendi a usar el formato Json como modo de persistencia de datos</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>stack tec</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">python</td class  >
                 </tr>
             </table>
-        </td>
+        </td class  >
         </tr>
         <tr>
-            <td>
+            <td class="roboto-regular-italic">
                 <table class="tablaI">
                 <tr>
-                    <th colspan="2">INFORMACION</th>
+                    <th class="roboto-bold">INFORMACION</th class="roboto-bold">
                 </tr>
                 <tr>
-                    <td>Nombre</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">Nombre</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">Santiago</td class  >
                 </tr>
                 <tr>
-                    <td>apellidos</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">apellidos</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">Mendieta Tello</td class  >
                 </tr>
                 <tr>
-                    <td>email</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">email</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">saniagomtello@gmail.com"</td class  >
                 </tr>
                 <tr>
-                    <td>Nro de contacto</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">Nro de contacto</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">+57 3024433900</td class  >
                 </tr>
                 <tr>
-                    <td>edad</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">edad</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr>
                 <tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">18 años</td class  >
                 </tr>
                 <tr>
-                    <td>direccion</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">direccion</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
                 </tr><tr>
-                    <td>&nbsp</td>
-                    <td>&nbsp</td>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">calle 36 #23-54 <br> El Poblado Giron</td class  >
+                </tr>
+                
+            </table>
+            </td class  >
+            <td class="roboto-regular-italic"><table class="tablaI">
+                <tr>
+                    <th class="roboto-bold">CURSOS</th class="roboto-bold">
+                </tr>
+                <tr>
+                    <td class="roboto-regular-italic">Tecnico en desarrollo de Software</td class  >
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                </tr>
+                <tr>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">CampusLands, 2024</td class  >
+                </tr>
+                <tr>
+                    <td class="roboto-regular-italic">&nbsp</td class  >
+                    <td class="roboto-regular-italic">Python, fundamentos de la programacion, html, css</td class  >
                 </tr>
             </table>
-            </td>
-            <td><table class="tablaI">
-                <tr>
-                    <th colspan="2">CURSOS</th>
-                </tr>
-                <tr>
-                    <td>Nombre del curso</td>
-                    <td>&nbsp</td>
-                </tr>
-                <tr>
-                    <td>&nbsp</td>
-                    <td>insitucion, año</td>
-                </tr>
-                <tr>
-                    <td>&nbsp</td>
-                    <td>stack tecnologico</td>
-                </tr>
-            </table>
-        </td>
-        <td><table class="tablaI">
+        </td class  >
+        <td class="roboto-regular-italic"><table class="tablaI">
             <tr>
-                <th colspan="2">EXPERIENCIA LABORAL</th>
+                <th class="roboto-bold">EXPERIENCIA LABORAL</th class="roboto-bold">
             </tr>
             <tr>
-                <td>Empresa o persona</td>
-                <td>&nbsp</td>
+                <td class="roboto-regular-italic">Netchb</td class  >
+                <td class="roboto-regular-italic">&nbsp</td class  >
             </tr>
             <tr>
-                <td></td>
-                <td>año/duracion</td>
+                <td class="roboto-regular-italic"></td class  >
+                <td class="roboto-regular-italic">2023- actualidad</td class  >
             </tr>
             <tr>
-                <td>&nbsp</td>
-                <td>logros</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>stack tech</td>
+                <td class="roboto-regular-italic">&nbsp</td class  >
+                <td class="roboto-regular-italic"><ul>
+                    <li>buen manejo de la tecnologia</li>
+                    <li> manejo de trabajo bajo presion</li>
+                    <li> optimizacion del trabajo </li>
+                </ul> </td class  >
             </tr>
         </table>
-        </td>
+        </td class  >
         </tr>
         <tr>
-            <td>&nbsp</td>
-            <td>&nbsp</td>
-            <td><table class="tablaI">
+            <td class="roboto-regular-italic">&nbsp</td class  >
+            <td class="roboto-regular-italic">&nbsp</td class  >
+            <td class="roboto-regular-italic">
+                <table class="tablaI">
                 <tr>
-                    <th>slills</th>
+                    <th class="roboto-bold">skills</th class="roboto-bold">
                 </tr>
                 <tr>
-                    <td>python basico</td>
+                    <td class="roboto-regular-italic">python basico</td class  >
             </table>
-            </td>
+            </td  >
         </tr>
         <tr>
-            
+            <tr>
+                <td class="roboto-regular-italic">&nbsp</td class  >
+                <td class="roboto-regular-italic">&nbsp</td class  >
+                <td class="roboto-regular-italic">
+                    <table class="tablaI">
+                    <tr>
+                        <th class="roboto-bold">Formulario</th class="roboto-bold">
+                    </tr>
+                    <tr>
+                        <td class="roboto-regular-italic">  <ul>
+                            <li>
+                            <label for="name">Nombre:</label>
+                            <input type="text" id="name" name="user_name" />
+                            </li>
+                            <li>
+                            <label for="mail">Correo electrónico:</label>
+                            <input type="email" id="mail" name="user_mail" />
+                            </li>
+                            <li>
+                                <label for="msg">Mensaje:</label><textarea id="msg" name="user_message"></textarea>
+                            </li>
+                        </ul>
+                        </td>
+                </table>
+                </td  >
+            </tr>
         </tr>
     </table>
 </body>
